# g_engine_2d

./: CMakeLists.txt  FontRenderer.cpp  LICENSE  README.md  audio_player.cpp  draw_calls.cpp  engine_modern.cpp  engine_old.cpp  engine_start.cpp  example.cpp  function_loader.cpp  g_engine_2d.h  g_primitive_funcs.h  gl_defines.h  image_draw.cpp  image_loader.cpp  input.cpp  line.cpp  matrix.cpp  matrix.h  shader.cpp  window.cpp
example/: example.cpp
example/resources/: img.fs  img.vs  invert.fs  invert.vs  line.vs  point.vs  trian.fs  trian.vs
source/: FontRenderer.cpp  audio.hpp  audio_player.cpp  backend.h  backend.hpp  bmp_loader.cpp  draw_calls.cpp  engine_modern.cpp  engine_start.cpp  example.cpp  font_renderer.cpp  font_renderer.h  font_renderer.hpp  function_loader.cpp  g_engine_2d.h  g_engine_2d.hpp  g_primitive_funcs.h  gl_defines.h  gl_defines.hpp  image_atlas.cpp  image_draw.cpp  image_loader.cpp  image_loader.h  image_loader.hpp  image_renderer.cpp  image_renderer.h  image_renderer.hpp  input.cpp  line.cpp  matrix.cpp  matrix.h  matrix.hpp  primitive_renderer.cpp  primitive_renderer.h  primitive_renderer.hpp  shader.cpp  shader.h  shader.hpp  vector.h  vector.hpp  (+1 more)
source/img_loading/: bmp_loader.cpp
